--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 
 /* Main title */
 .main-title {
-    font-size: 1.5em;
+    font-size: 1.6em;
     font-weight: bold;
     margin-bottom: 80px;
     text-align: center;
@@ -229,8 +229,15 @@ body {
     padding: 10px;
 }
 
+.hidden {
+    display: none !important;
+}
+
 /* Mobile responsive */
 @media(max-width: 550px) {
+    .main-title {
+        font-size: 1.2em;
+    }
     .sidebar.right {
         width: 140px;
     }
