--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ body {
 }
 
 .reward-wrapper img {
-    max-width: 100%;
-    max-height: auto;
+    max-width: 50%;
+    height: auto;
     border-radius: 8px;
     display: block;
     margin: 0 auto;
@@ -331,6 +331,10 @@ body {
     .question-box {
         font-size: 1.3em;
         padding: 20px 10px;
+    }
+
+    .reward-wrapper img {
+        max-width: 100%;
     }
 
     .sidebar.right {
